--- a/src/pages/PostPage/PostPage.module.scss
+++ b/src/pages/PostPage/PostPage.module.scss
@@ -21,7 +21,9 @@
   z-index: 1;
 }
 
-.closeSelectedPostButton {
+.buttonBar {
+  display: flex;
+  gap: 8px;
   position: absolute;
   z-index: 2;
   bottom: 16px;
